Added examples for importing code into the notebooks

--- a/FootballML/Individual_Results/logistic_regression_results.ipynb
+++ b/FootballML/Individual_Results/logistic_regression_results.ipynb
@@ -34,71 +34,119 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f567bed3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
-    "# WORKING ON IT\n",
-    "from FootballML.Classifiers.Individual.logistic_regression_classifier import test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d8bf8699",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It worked for logistic regression\n"
-     ]
-    }
-   ],
-   "source": [
-    "test()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "bdfe3921",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from FootballML.Dataset.cleaned_data import read_game_data_from_files\n",
-    "from FootballML import DATA_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "21289844",
-   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR: Cannot find file for year 2007\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "'/home/aleigator/FootballML/FootballML/FootballML/Dataset/Loaded_Raw_Data'"
+       "[       Unnamed: 0  attendance  away_first_downs  away_fourth_down_attempts  \\\n",
+       " 0    200709060clt       57361                18                          1   \n",
+       " 1    200709090ram       65307                21                          0   \n",
+       " 2    200709090min       62815                17                          0   \n",
+       " 3    200709090buf       71132                23                          2   \n",
+       " 4    200709090was       90163                17                          0   \n",
+       " ..            ...         ...               ...                        ...   \n",
+       " 262  200801130clt       56950                20                          0   \n",
+       " 263  200801130dal       63660                16                          0   \n",
+       " 264  200801200nwe       68756                17                          0   \n",
+       " 265  200801200gnb       72740                24                          1   \n",
+       " 266  200802030nwe       71101                17                          1   \n",
+       " \n",
+       "      away_fourth_down_conversions  away_fumbles  away_fumbles_lost  \\\n",
+       " 0                               1             2                  1   \n",
+       " 1                               0             3                  2   \n",
+       " 2                               0             1                  0   \n",
+       " 3                               2             1                  0   \n",
+       " 4                               0             1                  1   \n",
+       " ..                            ...           ...                ...   \n",
+       " 262                             0             1                  0   \n",
+       " 263                             0             0                  0   \n",
+       " 264                             0             1                  0   \n",
+       " 265                             0             5                  1   \n",
+       " 266                             1             2                  0   \n",
+       " \n",
+       "      away_interceptions  away_net_pass_yards  away_pass_attempts  ...  \\\n",
+       " 0                     2                  187                  41  ...   \n",
+       " 1                     0                  199                  27  ...   \n",
+       " 2                     2                  169                  32  ...   \n",
+       " 3                     1                  299                  39  ...   \n",
+       " 4                     0                  207                  38  ...   \n",
+       " ..                  ...                  ...                 ...  ...   \n",
+       " 262                   1                  312                  23  ...   \n",
+       " 263                   0                  140                  18  ...   \n",
+       " 264                   2                  207                  37  ...   \n",
+       " 265                   0                  243                  40  ...   \n",
+       " 266                   1                  247                  34  ...   \n",
+       " \n",
+       "                            stadium    surface     time  \\\n",
+       " 0                         RCA Dome  Fieldturf   8:39pm   \n",
+       " 1                Edward Jones Dome  Fieldturf  12:59pm   \n",
+       " 2     Hubert H. Humphrey Metrodome  Fieldturf   1:00pm   \n",
+       " 3             Ralph Wilson Stadium  Astroplay   1:02pm   \n",
+       " 4                       FedExField      Grass   1:02pm   \n",
+       " ..                             ...        ...      ...   \n",
+       " 262                       RCA Dome  Fieldturf   1:06pm   \n",
+       " 263                  Texas Stadium  Fieldturf   4:45pm   \n",
+       " 264               Gillette Stadium  Fieldturf   3:05pm   \n",
+       " 265                  Lambeau Field      Grass   6:42pm   \n",
+       " 266  University of Phoenix Stadium      Grass   6:30pm   \n",
+       " \n",
+       "                      vegas_line  \\\n",
+       " 0       Indianapolis Colts -5.5   \n",
+       " 1           St. Louis Rams -1.0   \n",
+       " 2        Minnesota Vikings -3.0   \n",
+       " 3           Denver Broncos -3.0   \n",
+       " 4      Washington Redskins -3.0   \n",
+       " ..                          ...   \n",
+       " 262    Indianapolis Colts -11.0   \n",
+       " 263         Dallas Cowboys -7.0   \n",
+       " 264  New England Patriots -14.0   \n",
+       " 265      Green Bay Packers -7.5   \n",
+       " 266  New England Patriots -12.5   \n",
+       " \n",
+       "                                                weather  winner  winning_abbr  \\\n",
+       " 0                                                  NaN    Home           CLT   \n",
+       " 1                                                  NaN    Away           CAR   \n",
+       " 2                                                  NaN    Home           MIN   \n",
+       " 3    70 degrees, relative humidity 93%, wind 5 mph,...    Away           DEN   \n",
+       " 4    82 degrees, relative humidity 66%, wind 7 mph,...    Home           WAS   \n",
+       " ..                                                 ...     ...           ...   \n",
+       " 262                                                NaN    Away           SDG   \n",
+       " 263  59 degrees, relative humidity 30%, no wind, wi...    Away           NYG   \n",
+       " 264  23 degrees, relative humidity 33%, wind 17 mph...    Home           NWE   \n",
+       " 265  -1 degrees, relative humidity 49%, wind 12 mph...    Away           NYG   \n",
+       " 266                                                NaN    Away           NYG   \n",
+       " \n",
+       "              winning_name  won_toss  week  \n",
+       " 0      Indianapolis Colts     Colts     1  \n",
+       " 1       Carolina Panthers  Panthers     1  \n",
+       " 2       Minnesota Vikings   Vikings     1  \n",
+       " 3          Denver Broncos     Bills     1  \n",
+       " 4     Washington Redskins  Dolphins     1  \n",
+       " ..                    ...       ...   ...  \n",
+       " 262    San Diego Chargers     Colts    19  \n",
+       " 263       New York Giants    Giants    19  \n",
+       " 264  New England Patriots  Chargers    20  \n",
+       " 265       New York Giants   Packers    20  \n",
+       " 266       New York Giants    Giants    21  \n",
+       " \n",
+       " [267 rows x 67 columns]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data2007 = read_game_data_from_files(2007)\n",
-    "DATA_PATH"
+    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
+    "# WORKING ON IT\n",
+    "from FootballML.Classifiers.Individual.logistic_regression_classifier import test_data\n",
+    "\n",
+    "# Display data\n",
+    "test = test_data()\n",
+    "test"
    ]
   }
  ],
