--- a/FootballML/Individual_Results/neural_network_results.ipynb
+++ b/FootballML/Individual_Results/neural_network_results.ipynb
@@ -40,25 +40,7 @@
    "source": [
     "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
     "# WORKING ON IT\n",
-    "from FootballML.Classifiers.Individual.neural_network_classifier import test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2729c179",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It worked for neural network\n"
-     ]
-    }
-   ],
-   "source": [
-    "test()"
+    "from FootballML.Classifiers.Individual.neural_network_classifier import test_data"
    ]
   }
  ],
