--- a/FootballML/Individual_Results/random_forest_results.ipynb
+++ b/FootballML/Individual_Results/random_forest_results.ipynb
@@ -36,29 +36,117 @@
    "execution_count": 2,
    "id": "a4f4cf6a",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
-    "# WORKING ON IT\n",
-    "from FootballML.Classifiers.Individual.random_forest_classifier import test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a603dc39",
-   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "It worked for random forest\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[       Unnamed: 0  attendance  away_first_downs  away_fourth_down_attempts  \\\n",
+       " 0    200909100pit       65110                18                          0   \n",
+       " 1    200909130rav       71099                11                          2   \n",
+       " 2    200909130clt       65757                12                          2   \n",
+       " 3    200909130cin       62831                10                          0   \n",
+       " 4    200909130tam       63806                18                          0   \n",
+       " ..            ...         ...               ...                        ...   \n",
+       " 262  201001170min       63547                16                          2   \n",
+       " 263  201001170sdg       69498                14                          1   \n",
+       " 264  201001240clt       67650                17                          0   \n",
+       " 265  201001240nor       71276                31                          0   \n",
+       " 266  201002070clt       74059                20                          1   \n",
+       " \n",
+       "      away_fourth_down_conversions  away_fumbles  away_fumbles_lost  \\\n",
+       " 0                               0             2                  1   \n",
+       " 1                               1             2                  0   \n",
+       " 2                               1             0                  0   \n",
+       " 3                               0             1                  0   \n",
+       " 4                               0             1                  0   \n",
+       " ..                            ...           ...                ...   \n",
+       " 262                             0             4                  2   \n",
+       " 263                             1             0                  0   \n",
+       " 264                             0             0                  0   \n",
+       " 265                             0             6                  3   \n",
+       " 266                             0             0                  0   \n",
+       " \n",
+       "      away_interceptions  away_net_pass_yards  away_pass_attempts  ...  \\\n",
+       " 0                     1                  234                  35  ...   \n",
+       " 1                     0                  159                  24  ...   \n",
+       " 2                     0                  114                  28  ...   \n",
+       " 3                     0                  227                  28  ...   \n",
+       " 4                     0                  344                  27  ...   \n",
+       " ..                  ...                  ...                 ...  ...   \n",
+       " 262                   1                  156                  35  ...   \n",
+       " 263                   1                   93                  23  ...   \n",
+       " 264                   1                  302                  31  ...   \n",
+       " 265                   2                  310                  46  ...   \n",
+       " 266                   0                  281                  39  ...   \n",
+       " \n",
+       "                           stadium     surface    time  \\\n",
+       " 0                     Heinz Field  Dessograss  8:41pm   \n",
+       " 1                M&T Bank Stadium   Sportturf  1:02pm   \n",
+       " 2               Lucas Oil Stadium   Fieldturf  1:02pm   \n",
+       " 3              Paul Brown Stadium   Fieldturf  1:02pm   \n",
+       " 4           Raymond James Stadium       Grass  1:03pm   \n",
+       " ..                            ...         ...     ...   \n",
+       " 262  Hubert H. Humphrey Metrodome   Fieldturf  1:05pm   \n",
+       " 263              Qualcomm Stadium       Grass  4:40pm   \n",
+       " 264             Lucas Oil Stadium   Fieldturf  3:05pm   \n",
+       " 265           Louisiana Superdome   Fieldturf  6:45pm   \n",
+       " 266               Dolphin Stadium       Grass  6:31pm   \n",
+       " \n",
+       "                    vegas_line  \\\n",
+       " 0    Pittsburgh Steelers -6.5   \n",
+       " 1      Baltimore Ravens -13.0   \n",
+       " 2     Indianapolis Colts -6.0   \n",
+       " 3     Cincinnati Bengals -5.0   \n",
+       " 4         Dallas Cowboys -5.0   \n",
+       " ..                        ...   \n",
+       " 262    Minnesota Vikings -2.5   \n",
+       " 263   San Diego Chargers -9.0   \n",
+       " 264   Indianapolis Colts -8.5   \n",
+       " 265   New Orleans Saints -3.5   \n",
+       " 266   Indianapolis Colts -4.5   \n",
+       " \n",
+       "                                                weather  winner  winning_abbr  \\\n",
+       " 0        67 degrees, relative humidity 54%, wind 9 mph    Home           PIT   \n",
+       " 1    76 degrees, relative humidity 68%, wind 5 mph,...    Home           RAV   \n",
+       " 2                                                  NaN    Home           CLT   \n",
+       " 3    73 degrees, relative humidity 47%, wind 7 mph,...    Away           DEN   \n",
+       " 4        85 degrees, relative humidity 82%, wind 6 mph    Away           DAL   \n",
+       " ..                                                 ...     ...           ...   \n",
+       " 262                                                NaN    Home           MIN   \n",
+       " 263  63 degrees, relative humidity 42%, wind 8 mph,...    Away           NYJ   \n",
+       " 264                                                NaN    Home           CLT   \n",
+       " 265                                                NaN    Home           NOR   \n",
+       " 266  60 degrees, relative humidity 57%, wind 6 mph,...    Away           NOR   \n",
+       " \n",
+       "             winning_name            won_toss  week  \n",
+       " 0    Pittsburgh Steelers   Titans (deferred)     1  \n",
+       " 1       Baltimore Ravens   Ravens (deferred)     1  \n",
+       " 2     Indianapolis Colts               Colts     1  \n",
+       " 3         Denver Broncos  Bengals (deferred)     1  \n",
+       " 4         Dallas Cowboys             Cowboys     1  \n",
+       " ..                   ...                 ...   ...  \n",
+       " 262    Minnesota Vikings             Cowboys    19  \n",
+       " 263        New York Jets     Jets (deferred)    19  \n",
+       " 264   Indianapolis Colts               Colts    20  \n",
+       " 265   New Orleans Saints             Vikings    20  \n",
+       " 266   New Orleans Saints              Saints    21  \n",
+       " \n",
+       " [267 rows x 67 columns]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test()"
+    "# THIS IS HERE JUST AS AN EXAMPLE. YOU CAN REMOVE THIS WHEN YOU START \n",
+    "# WORKING ON IT\n",
+    "from FootballML.Classifiers.Individual.random_forest_classifier import test_data\n",
+    "\n",
+    "# Display data\n",
+    "test = test_data()\n",
+    "test"
    ]
   }
  ],
